--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     font-weight: normal;
     font-style: normal;
   }
+  body{
+    font-family: Vazir !important;
+  }
     </style>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vazir-font/27.0.2/font-face.css">
